# scraper

./: Cargo.toml  TODO  Targets.txt  https:__www.placera.se_placera_redaktionellt_2022_11_10_torsdagens-alla-nya-aktierekar.html  tester.ttt  testing
src/: config.json  main.rs  output.json  scrape.rs
