[package]
name = "scrape_placera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
chrono = "*"
regex = "1.7.1"
